--- a/.github/workflows/master_saazne.yml
+++ b/.github/workflows/master_saazne.yml
@@ -25,20 +25,22 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+#          npm run test --if-present
+      - name: Zip all files for upload between jobs
+        run: zip --symlinks -r nest.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: nest.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: $ #${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
@@ -52,5 +54,8 @@ jobs:
         with:
           app-name: 'saazne'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6061D911DF8C4279ADF98E1E11120CCA }}
-          package: .
+          publish-profile: $ #${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6061D911DF8C4279ADF98E1E11120CCA }}
+          package: nest.zip
+
+      - name :Delete zip file
+        run: rm nest.zip
